--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build": "npx browserslist@latest --update-db && next build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +20,7 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "http-build-query": "^0.7.0",
+    "lamejs": "^1.2.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "next": "14.1.4",
