--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "punycode": "^2.3.1",
     "http-build-query": "^0.7.0",
     "lamejs": "^1.2.1",
     "moment": "^2.30.1",
