--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
-    "punycode": "^2.3.1",
     "http-build-query": "^0.7.0",
     "lamejs": "^1.2.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
-    "next": "14.1.4",
+    "next": "^14.2.17",
     "next-auth": "^4.24.7",
     "openai": "^4.56.0",
     "path": "^0.12.7",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
