--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-employees": "ts-node app/scripts/migrate-employees.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.5",
     "@vercel/kv": "^2.0.0",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
@@ -39,6 +41,7 @@
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "@types/xml2js": "^0.4.14",
+    "ts-node": "^10.9.2",
     "typescript": "5.4.5"
   },
   "prettier": {
